# Gaea-Editor

./: .gitignore  Cargo.toml  LICENSE.md  README.md  ROADMAP.md  THIRD_PARTY.md
mc_version/: Cargo.toml
mc_version/src/: lib.rs
mc_version_macro/: Cargo.toml
mc_version_macro/src/: lib.rs
mc_versions/: Cargo.toml
mc_versions/src/: lib.rs
notes/: ProjectArchitecture.md  ProjectArchitecture2.md
panic_silencer/: Cargo.toml
panic_silencer/src/: lib.rs
resources/assets/: test.mcfunction
resources/assets/localization/: en_us.json
resources/assets/syntaxes/: mcfunction.sublime-syntax
resources/assets/syntaxes/mcfunction/: base.sublime-syntax
resources/assets/syntaxes/mcfunction/base/: basic.sublime-syntax  command_dispatcher.sublime-syntax  main.sublime-syntax  resources.sublime-syntax  selectors.sublime-syntax
resources/assets/syntaxes/mcfunction/commands/execute/: 1.20.4.sublime-syntax
resources/assets/syntaxes/mcfunction/commands/function/: 1.20.2.sublime-syntax
src/: app_context.rs  main.rs  version.rs
src/application/: app_context.rs  mod.rs
src/application/gui/: action_bar.rs  header.rs  mod.rs  window.rs
src/application/gui/text_editor/: highlighter.rs  mod.rs
src/application/gui/widgets/: icons.rs  menu.rs  mod.rs
src/application/gui/widgets/menu/: menu.rs  menu_bar.rs  menu_item.rs  mod.rs
src/data/: mod.rs  version.rs
src/data/adapters/: mod.rs  pack_info.rs  project.rs  resource_location.rs
src/data/domain/: mod.rs  pack_info.rs  project.rs  version.rs  versions.rs
src/data/domain/resource/: mod.rs  resource.rs
src/data/domain/resource/data/: advancement.rs  mod.rs
src/data/serialization/: mod.rs  pack_info.rs  project.rs  text.rs
src/data/workspace/: project.rs
src/domain/: mod.rs  project.rs
src/domain/resource/: mod.rs  resource.rs
src/domain/resource/data/: advancement.rs
src/gui/: mod.rs  widgets.rs  window.rs
src/gui/text_editor/: highlighter.rs  mod.rs
src/infrastructure/: mod.rs
src/persistence/: mod.rs
src/persistence/repositories/: mod.rs  project_repo.rs
src/repositories/: adapter_repo.rs  mod.rs  project_repo.rs
src/services/: filesystem_service.rs  mod.rs  project_service.rs  translation_service.rs  undo_service.rs  zip_service.rs
src/services/resource/: mod.rs
tests/mcfunction/: block_predicate.mcfunction  commands.mcfunction  comments.mcfunction  everything.mcfunction  fakeplayer.mcfunction  general_test.mcfunction  greedy_commands.mcfunction  json.mcfunction  misc.mcfunction  nbt_compound.mcfunction  nbt_list.mcfunction  no_newline.mcfunction  number.mcfunction  operation.mcfunction  range.mcfunction  resource_location.mcfunction  root_redirect.mcfunction  selector.mcfunction  showcase.mcfunction  strings.mcfunction  uuid.mcfunction
tests/mcfunction/commands/: effect.mcfunction
tests/mcfunction/nbt_path/: invalid.mcfunction  valid.mcfunction
tests/mcfunction/parsers/: block_position.mcfunction
tests/mcfunction/parsers/block_position/: invalid.mcfunction  valid.mcfunction
tests/mcfunction/parsers/dimension/: invalid.mcfunction  valid.mcfunction
tests/mcfunction/parsers/entity_anchor/: invalid.mcfunction  valid.mcfunction
tests/mcfunction/parsers/int_range/: invalid.mcfunction  valid.mcfunction
tests/mcfunction/parsers/message/: invalid.mcfunction  valid.mcfunction
tests/mcfunction/parsers/position/: invalid.mcfunction  valid.mcfunction
tests/mcfunction/parsers/rotation/: invalid.mcfunction  valid.mcfunction
tests/mcfunction/parsers/swizzle/: invalid.mcfunction  valid.mcfunction
tests/mcfunction/target_selectors/: invalid.mcfunction  valid.mcfunction
tests/mcfunction/text_components/: invalid.mcfunction  valid.mcfunction
translation_macro/: Cargo.toml
translation_macro/src/: lib.rs
