[package]
name = "gaea-mc"
version = "0.0.0"
description = "Gaea - Minecraft Data and Resourcepack Generator"
authors = ["The Lady Dawn"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
serde_with = "3.14"
serde_bytes = "0.11"

zip = "2.4"

iced = { version = "0.13.1", features = ["highlighter", "tokio", "debug"] }
iced_aw = { version = "0.12.0", features = ["default"] }

tokio = { version = "1.44", features = ["fs", "macros"] }

rfd = "0.13"

syntect = "5.2.0"
syntect_minecraft_highlighting = "0.1.0"

once_cell = "1.20.3"

dashmap = "7.0.0-rc2"
glob = "0.3.2"

sea-orm = {  version = "2.0.0-rc.1", features = ["runtime-tokio", "sqlx-sqlite", "with-json", "macros"] }

uuid = { version = "1.16.0", features = ["v7", "serde"] }
thiserror = "1.0.69"

paste = "1.0"
anyhow = "1.0.97"
regex = "1.11.1"

async-trait = "0.1"

sanitize-filename = "0.6"

derive-new = "0.7"
getset = "0.1"
mockall = "0.13.1"

mc_version = { path = "./mc_version" }
mc_version_macro = { path = "./mc_version_macro" }

[dev-dependencies]
tokio = { version = "1.44", features = ["test-util"] }
serial_test = "3.2"
tempfile = "3.20"
rstest = "0.25.0"

panic_silencer = { path = "./panic_silencer" }