[package]
name = "gaea-mc"
version = "0.0.0"
description = "Gaea - Minecraft Data and Resourcepack Generator"
authors = ["The Lady Dawn"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.142"
serde_repr = "0.1.20"
serde_with = "3.14"
serde_bytes = "0.11"

zip = "2.4"

iced = { version = "0.13.1", features = ["highlighter", "tokio", "debug"] }
iced_aw = { version = "0.12.2", features = ["default"] }

tokio = { version = "1.47.1", features = ["fs", "macros"] }


syntect = "5.2.0"
syntect_minecraft_highlighting = "0.1.0"

rfd = "0.15.4"
once_cell = "1.21.3"
dashmap = "7.0.0-rc2"
glob = "0.3.2"
map_tuple = "0.1.3"

sea-orm = {  version = "2.0.0-rc.1", features = ["runtime-tokio", "sqlx-sqlite", "with-json", "macros"] }

uuid = { version = "1.16.0", features = ["v7", "serde"] }
thiserror = "2.0.12"

paste = "1.0"
anyhow = "1.0.97"
regex = "1.11.1"

async-trait = "0.1.88"

sanitize-filename = "0.6"

derive-new = "0.7"
getset = "0.1.6"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

mc_version = { path = "./mc_version" }
mc_version_macro = { path = "./mc_version_macro" }
translation_macro = { path = "./translation_macro" }

[dev-dependencies]
tokio = { version = "1.47.1", features = ["test-util"] }
serial_test = "3.2"
tempfile = "3.20"
rstest = "0.26.1"
mockall = "0.13.1"

panic_silencer = { path = "./panic_silencer" }